<resources>
    <string name="app_name">SWeather</string>
    <string name="db_copy_fail">Error!</string>
    <string name="db_copy_success">Initialization successful!</string>
    <string name="main_head_city">City</string>
    <string name="main_head_add">Add</string>
    <string name="main_head_more">More</string>
    <string name="add_city_edit_hint_search">Search</string>
    <string name="add_city_head_map">Map</string>
    <string name="topic_city">TopicCity</string>
    <string name="search_city_null">No results found</string>
    <string name="no_net_msg">The current network is not connected, please check the network</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">cancel</string>
    <string name="repeat">Repeat</string>
    <string name="load_error">Load failure  !</string>
    <string name="pre_hour">Daily</string>
    <string name="today">Today</string>
    <string name="loading">Loading</string>
    <string name="month">-</string>
    <string name="day">-</string>
    <string name="temperature">°c</string>
    <string name="aqi">AQI</string>
    <string name="wind_speed">m/s</string>
    <string name="error_net">Net Error</string>
    <string name="error_serve">Serve Error</string>
    <string name="msg_add_city">Please add your city</string>
    <string name="no_data">No Data</string>
    <string name="registered">Registered</string>
    <string name="all">All</string>
    <string name="delete">Delete</string>
    <string name="china">China</string>
    <string name="no_city">You have not added any city !</string>
    <string name="updata_db">Updating data, do not exit !</string>
    <string name="updata_db_fail">A fatal error has occurred,system is recovering</string>
    <string name="operate_success">Successful operation</string>
    <string name="recovery_success">Emergency recovery success</string>
    <string name="delete_all">Unfortunately, the repair failed and the data was empty!</string>
    <string name="select_city">Select City</string>
    <string name="edit">Edit</string>
    <string name="setting">Setting</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="gps">Use current position</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="contact_us">Contact us</string>
    <string name="update_weather">Update weather</string>
    <string name="error_data">Error data</string>
    <string name="clear_app_data">Delete all cities or empty application data</string>
    <string name="unknow_data">\???</string>
    <string name="refresh_weather_data">Updating weather data</string>
    <string name="refresh_success">Update success</string>
    <string name="refresh_fail">Error updating data, please try again</string>
    <string name="update_service_running">Updating the weather, please wait a moment</string>
    <string name="none">None</string>
    <string name="topic">Topic</string>
    <string name="gps_help_msg">For the fastest and most accurate location detection, open GPS</string>
    <string name="open">Open</string>
    <string name="later_on">Later on</string>
    <string name="fail_location_permission">The lack of location permission, please open the settings - applications, and then try to locate again</string>
    <string name="fail_location">The location failed. Please check whether the network and location are open or try later</string>
    <string name="positioning">Positioning</string>
    <string name="location__success">Locate successfully, getting weather information</string>
    <string name="clear_location">Clearing location information...</string>
    <string name="location_service_running">Positioned. Please try again later</string>
    <string name="refresh_location">Refresh location</string>
</resources>
