<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@color/colorAddCityHeadBG">
    <ImageButton
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:text="@string/main_head_city"
        android:layout_marginLeft="8dp"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="right">
        <TextView
            style="@style/MainHeadText"
            android:id="@+id/tv_add"
            android:text="@string/main_head_add"
            />
        <TextView
            style="@style/MainHeadText"
            android:id="@+id/tv_more"
            android:text="@string/main_head_more"
            />
    </LinearLayout>
</LinearLayout>